argocd/apps/kuma/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kuma
  name: kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:latest
          imagePullPolicy: Always
          name: kuma
          resources:
            limits:
              cpu: 50m
              memory: 250Mi
            requests:
              cpu: 25m
              memory: 150Mi
          ports:
            - containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 360
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
