argocd/apps/kuma/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuma
  name: kuma
spec:
  ports:
    - name: "http"
      port: 3001
      targetPort: 7745
  selector:
    app: kuma
