argocd/apps/kuma/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma
spec:
  ingressClassName: istio
  rules:
    - host: kuma.yanello.net
      http:
        paths:
          - backend:
              service:
                name: kuma
                port:
                  number: 3001
            path: /
            pathType: Prefix
